MLGame/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-game-server
  namespace: ml-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-game-server
  template:
    metadata:
      labels:
        app: ml-game-server
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ml-game-server
          image: ghcr.io/t-foerst/ml-game/server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
