MLGame/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-game-server
  namespace: ml-game
spec:
  selector:
    app: ml-game-server
  ports:
    - port: 3001
      targetPort: http
