MLGame/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-game-server
  namespace: ml-game
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - game.foerst.haus
      secretName: ml-game-tls
  rules:
    - host: game.foerst.haus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-game-server
                port:
                  number: 3001
